# GeometryDraw

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Geometry draw.sln  Geometry draw.vcxproj  Geometry draw.vcxproj.filters  Geometrydraw.qrc  Geometrydraw.ui  README.md  main.cpp  mainwindow.cpp  mainwindow.h
VC/: Geometry draw.sln  Geometry draw.vcxproj  Geometry draw.vcxproj.filters
source/: Geometrydraw.qrc  Geometrydraw.ui  geometry.cpp  geometry.h  main.cpp  mainwindow.cpp  mainwindow.h
